<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.SettingFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_200">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/settings"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/nav_header" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_tempra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="30dp"
            android:text="@string/temperature"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_tempra"
            android:layout_marginTop="0dp"
            android:padding="20dp"
            android:text="@string/fahrenheit"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_tempra"
            android:layout_toRightOf="@id/textF"
            android:padding="20dp"
            android:scaleX="2"
            android:textSize="30sp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="30dp"
            android:text="@string/mode"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_mode"
            android:layout_marginTop="0dp"
            android:padding="20dp"
            android:text="@string/darkmode"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_mode"
            android:layout_toRightOf="@id/dark_mode"
            android:paddingLeft="50dp"
            android:paddingTop="20dp"
            android:scaleX="2"
            android:textSize="30sp" />
    </RelativeLayout>

</LinearLayout>